2002-10-01  Pierre-Luc Paour <gallery@paour.com> (1.0-b7)
	
	* Added image resize before upload (this requires ImageMagick and can be enabled by 
		changing the variables resizeTo and resizeBeforeUpload in
		GalleryRemote.properties.
	* Added automatic update notification for betas, too. Beta builds will come with
		this enabled. Release builds will only check for new releases, unless
		otherwise specified.

2002-09-22  Pierre-Luc Paour <gallery@paour.com> (1.0-b6)
	
	* Added multi-album upload! Add pictures to different albums and click Upload
		Albums.
	* Almost complete rewrite of GalleryComm. Maybe it will be more robust, maybe
		more broken.
	* The preferences file is now called GalleryRemote.properties and resides in GalleryRemote
		in the home directory. This should fix problems with preferences not being saved
		but it means users will have to either copy the preferences file over themselves
		or recreate their preferences.
	* The file input dialog now accepts more types of media.
	* Fixed bug 612281: redirects needed two clicks.
	* Fixed bug 521237: non-unique album titles would confuse the Albums combo-box.

2002-09-17  Pierre-Luc Paour <gallery@paour.com> (1.0-b5)
	
	* Corrected problems on JDK 1.3 with url combo box
	* Added more logging for communications, in order to help detect comm problems.

2002-09-09  Pierre-Luc Paour <gallery@paour.com> (1.0-b4, released as 1.0 preview)
	
	* Added a new version check at launch
	* Added readme

2002-09-02  Pierre-Luc Paour <gallery@paour.com> (1.0-b3)
	
	* Added multi-selection support to the PictureInspector. Fixed buttons.
	* Switched to an Ant-based build system
	* Fixed inspector state when deleting pictures
	* Now saving multiple profiles for different Galleries (use the URL combo box)

2002-09-01  Pierre-Luc Paour <gallery@paour.com> (1.0-b2)
	
	* Now optionally using ImageMagick to load thumbnails and preview, for a 5x speedup
	  and better memory management. In the future, we'll use IM to also