@@ -82,6 +82,6 @@ updateUrlBeta=http://gallery.sourceforge.net/gallery_remote_version_check_beta.p
 #
 # --- Do not edit below this line ---
 #
-version=1.0b7
-releaseDate=2002/10/01
+version=1.0b8
+releaseDate=2002/10/03
 aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by Pierre-Luc Paour\n \nInitial version by Chris Smith\n \n \nContributors:\n \nDolan Halbrook\nTim Miller
