@@ -1,3 +1,7 @@
+2002-10-03  Pierre-Luc Paour <gallery@paour.com> (1.0-b8)
+	
+	* Fixed another Java 1.3 bug where the Album combo box was not working
+
 2002-10-01  Pierre-Luc Paour <gallery@paour.com> (1.0-b7)
 	
 	* Added image resize before upload (this requires ImageMagick and can be enabled by 
